@@ -125,3 +125,5 @@ ERR_COULD_NOT_OPEN_ARCHIVE_PART="Could not open archive part file %s for reading
 
 RENAME_FILES="Rename server configuration files before extraction"
 BTN_SHOW_FINE_TUNE="Show advanced options (for experts)"
+
+RESTORE_PERMISSIONS="Restore file permissions"
